--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "spatie/laravel-sluggable": "^3.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.52",
         "laravel/pint": "^1.13",
