--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "opcodesio/log-viewer": "^3.10",
         "propaganistas/laravel-phone": "^5.2",
         "shaka/dynamic-update-trait": "^1.0",
         "spatie/laravel-medialibrary": "^11.4",
