--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/cloud-firestore": "^1.44",
         "ichtrojan/laravel-otp": "^2.0",
         "kreait/firebase-php": "^7.13",
         "laravel/framework": "^11.0",
